# stansec

./: .gitignore  CMakeLists.txt  README.md  stansec.pro
.obs/: workflows.yml
include/llvm/ADT/: BreadthFirstIterator.h
src/: CMakeLists.txt
src/checker/: CMakeLists.txt  Checker.h  CheckerCreator.h  CheckerError.cpp  CheckerError.h  CheckerErrorReceiver.h  CheckerErrorTrace.cpp  CheckerErrorTrace.h  CheckerErrorTraceLocation.h  CheckerFactory.cpp  CheckerFactory.h  CheckerProgressMonitor.h  CheckingResult.h  CheckingSuccess.h
src/checker/automatonchecker/: AutomatonChecker.cpp  AutomatonChecker.h  AutomatonCheckerCreator.h  AutomatonCheckerLogger.h  AutomatonState.h  AutomatonStateCFGcontextAlgo.cpp  AutomatonStateCFGcontextAlgo.h  AutomatonStateContextAlgo.cpp  AutomatonStateContextAlgo.h  AutomatonStateContextItem.h  AutomatonStateTransferManager.cpp  AutomatonStateTransferManager.h  CallSiteCFGNavigator.h  CallSiteDetector.h  CheckerErrorBuilder.cpp  CheckerErrorBuilder.h  ComposedAutomatonID.h  ConnectPatternLocationToSuccessors.cpp  ConnectPatternLocationToSuccessors.h  ErrorRule.h  ErrorTracesListCreator.cpp  ErrorTracesListCreator.h  FalsePositivesDetector.h  NodeLocationDictionary.cpp  NodeLocationDictionary.h  PatternLocation.cpp  PatternLocation.h  PatternLocationBuilder.cpp  PatternLocationBuilder.h  PatternLocationCreator.cpp  PatternLocationCreator.h  SimpleAutomatonID.cpp  SimpleAutomatonID.h  TransitionRule.h  XMLAutomatonDefinition.cpp  XMLAutomatonDefinition.h  XMLErrorRule.cpp  XMLErrorRule.h  XMLRuleStringParser.cpp  XMLRuleStringParser.h  (+2 more)
src/checker/reachabilitychecker/: ReachabilityChecker.cpp  ReachabilityChecker.h  ReachabilityCheckerCreator.h
src/codestructures/: ArgumentPassingManager.cpp  ArgumentPassingManager.h  CFGHandle.cpp  CFGHandle.h  CFGNode.cpp  CFGNode.h  CFGsNavigator.h  CMakeLists.txt  InterproceduralCFGsNavigator.cpp  InterproceduralCFGsNavigator.h  IntraproceduralCFGsNavigator.h  LazyInternalStructures.cpp  LazyInternalStructures.h  LazyInternalStructuresInter.h  LazyInternalStructuresIntra.h  PassingSolver.cpp  PassingSolver.h
src/codestructures/builders/: NodeToCFGdictionaryBuilder.cpp  NodeToCFGdictionaryBuilder.h  StartFunctionsSetBuilder.cpp  StartFunctionsSetBuilder.h  XMLLinearizeASTElement.cpp  XMLLinearizeASTElement.h
src/codestructures/traversal/: CFGPathVisitor.h  CFGTraversal.cpp  CFGTraversal.h  CFGVisitor.h
src/core/: CMakeLists.txt  CheckerConfiguration.cpp  CheckerConfiguration.h  CmdLineManager.cpp  CmdLineManager.h  Configuration.h  core.pro  main.cpp  stansec.cpp  stansec.h
src/parser/: .gitignore  C.g4  CFG.cpp  CFG.h  CFGListener.cpp  CFGListener.h  CMakeLists.txt  GNUCa.g  GNUmakefile  Makefile  main.cpp  main.h  parser.cpp  parser.h  parser.pro  typedef_glue.cpp
src/parser/codestructures/: CFG.cpp  CFG.h  CFGNode.cpp  CFGNode.h  CFGPart.cpp  CFGPart.h
src/ui/: mainwindow.cpp  mainwindow.h  mainwindow.ui  sourcecodeedit.cpp  sourcecodeedit.h  treeerrormodel.cpp  treeerrormodel.h
src/utils/: AliasResolver.h  CMakeLists.txt
src/utils/xmlpatterns/: XMLAlgo.cpp  XMLAlgo.h  XMLPattern.cpp  XMLPattern.h  XMLPatternVariablesAssignment.cpp  XMLPatternVariablesAssignment.h
test/: CMakeLists.txt  auto.xml  lock_bad.c  lock_global_bad.c  lock_global_good.c  lock_good.c  lock_local.c  lock_member.c  reach_bad.c
trans/: stansec_cs.ts  stansec_cs_CZ.ts
